--- a/css/queries.css
+++ b/css/queries.css
@@ -5,17 +5,22 @@
 @media all and (min-width: 768px) {
   /* FEATURE SECTION */
   .feature-section {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    /* display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
   }
 
   .feature-section .col {
-    width: calc(100% / 3 - 10px);
+    margin-bottom: 0;
+    /* width: calc(100% / 3 - 20px); */
   }
 
   .feature-section .first-col {
-    width: calc((100% / 3) * 2);
+    /* width: calc((100% / 3) * 2); */
+    grid-column: 1 / 3;
   }
 
   .first-col-img {
@@ -86,6 +91,11 @@
 /* ABOVE 1200px (DESKTOP) */
 /* ***************************** */
 @media all and (min-width: 1200px) {
+  /* GENERAL */
+  .section-padding {
+    padding: 9.6rem 0;
+  }
+
   /* HEADER */
   header .container {
     width: 60%;
